Fixing spacing issues found in firefox.

--- a/styles/style.css
+++ b/styles/style.css
@@ -598,7 +598,7 @@ h4.upcoming--date {
     grid-column: -1 / 1;
     grid-template-columns: 1fr;
     height: 60%;
-    grid-template-rows: 1;
+    /* grid-template-rows: 1; */
     justify-content: center;
 }
 .player--interface {
@@ -618,7 +618,6 @@ h4.upcoming--date {
     grid-row: -1 / 1;
     object-fit: cover;
     width: 100%;
-    height: 100%;
 }
 .player--play-button {
     grid-column: -1 / 1;
@@ -890,7 +889,7 @@ img.hero--arrow {
 }
 .blocks--container {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2;
+    grid-template-rows: 200px 200px;
     grid-template-areas:
         "dates sarah"
         "music sarah";
@@ -1152,7 +1151,7 @@ img.hero--arrow {
 }
 .blocks--container {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2;
+    grid-template-rows: 200px 200px;
     grid-template-areas:
         "dates sarah"
         "music sarah";
@@ -1239,13 +1238,14 @@ h4.upcoming--date {
     grid-column-gap: 5rem;
 }
 .music--tracks--container {
-    grid-template-rows: 30px 30vw 50px;
+    grid-template-rows: 30px 40vw 50px;
+    grid-auto-rows: 50px;
     grid-row-gap: 4rem;
 }
+
 .music--videos--container {
     grid-auto-rows: 20vw;
 }
-
 
 /* ABOUT PAGE */
 .about--hero--container {
@@ -1396,7 +1396,7 @@ img.hero--arrow {
 }
 .blocks--container {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2;
+    grid-template-rows: 275px 275px;
     grid-template-areas:
         "dates sarah"
         "music sarah";
@@ -1492,7 +1492,7 @@ h4.upcoming--date {
 }
 
 .music--tracks--container {
-    grid-template-rows: 30px 30vw 50px;
+    grid-template-rows: 30px 35vw 50px;
     grid-row-gap: 3rem;
 }
 .music--videos--container {
